--- a/sdi-project4.html
+++ b/sdi-project4.html
@@ -11,10 +11,10 @@
     <h2>Project 4</h2>
 </header>
 <article>
-<p>You don't need to put anything here for this project.  Though you can if you want to!</p>
+<p>This has been some experience and I know I will not be forgetting this class nor will it me!</p>
 </article>
 <footer>
-    <p>COMPLETION DATE, Victor Vazquez</p>
+    <p>08/28/2014, Victor Vazquez</p>
 </footer>
 <script type="text/javascript" src="vazquez_victor_assignment4.js"></script>
 </body>
